<resources>
    <string name="app_name">TimeKeeping</string>
    <string name="edittext_hint">
        <font size="20">Enter description here</font>
    </string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="msg_server_error">Sorry, it seems that there has been an error. Please try again</string>

    <string name="action_settings">Settings</string>
    <string name="title_leave_time">Leave Time</string>
    <string name="title_leave">leave</string>
    <string name="title_days">days</string>
    <string name="title_compensatory_leave">compensatory leave</string>
    <string name="title_history">History</string>
    <string name="tv_cancel">Cancel</string>
    <string name="title_edit_time">Edit Time</string>
    <string name="tv_save">Save</string>
    <string name="hint_start">Start :</string>
    <string name="title_end">End :</string>
    <string name="tvTitle">Title</string>
    <string name="title">Title</string>
    <string name="spin_leave">PAID</string>
    <string name="spin_compensatory_leave">UNPAID</string>
    <string name="title_staff_management">Staff management</string>
    <string name="title_gem">GEM</string>
    <string name="hint_email">Email</string>
    <string name="message_success_add_leave">Add leave successfully</string>
    <string name="message_wait">please wait ....</string>
    <string name="btn_select">select</string>
    <string name="nav_leave_app">Leaving Request</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_check_in_out">Check in/out</string>
    <string name="btn_log_out">Log Out</string>
    <string name="title_leave_total">Total</string>
    <string name="total_leave_used">Used</string>
    <string name="check_in_out_success">Check in/out successfully</string>
    <string name="check_in_out_fail">Check in/out fail</string>
    <string name="title_total_count">Total count</string>
    <string name="incorrect_qr_code">INCORRECT_QR_CODE</string>
    <string name="in_out_record_not_found">IN_OUT_RECORD_NOT_FOUND</string>
    <string name="not_internet">Please connect to internet</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="tv_gem_internal_application">Phát triển bởi Mobile team</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="change_pass_success">Change password success</string>
    <string name="confirm_pass">New password not match</string>
    <string name="title_current_password">Current Password</string>
    <string name="title_new_password">New Password</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="btn_submit">Submit</string>
    <string name="current_password_empty">current password must not empty</string>
    <string name="new_password_empty">new password must not empty</string>
    <string name="confirm_password_empty">confirm password must not empty</string>
    <string name="request_approved">request approved</string>
    <string name="request_ejected">request ejected</string>
    <string name="tv_delete">delete</string>
    <string name="update_successfully">update successfully</string>
    <string name="delete_successfully">delete successfully</string>
    <string name="delete_request">delete this request ?</string>
    <string name="put_device_horizontal">Better when device is horizontal</string>
    <string name="internet_not_available">Please connect to GEM Internet</string>
    <string name="tv_save_username_and_password">save username and password</string>
    <string name="click_back_to_exit">Please click BACK again to exit</string>
    <string name="title_activity_detect_photo">DetectPhotoActivity</string>
    <string name="faces">faces</string>
    <string name="classify">Classify</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="cofirm_pass_equal_pass">confirm password must equal new password</string>

</resources>
