<?xml version="1.0" encoding="utf-8"?>
<merge>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="3dp">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="16dp"
            android:text="@string/tv_cancel"
            android:textColor="@color/text_pressed_white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_edit_time"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:text="@string/tv_save"
            android:textColor="@color/text_pressed_white"
            android:textSize="20sp" />

    </RelativeLayout>

</merge>