<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:orientation="vertical">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layoutChangePassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="Change Your Password"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:gravity="center_vertical"
            android:text="@string/title_current_password"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/current_pass_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:background="@color/grey"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:paddingStart="20dp" />

            <ImageView
                android:id="@+id/eyes_current_pass"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:background="@drawable/background_pressed_icon_grey"
                android:layout_gravity="right"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_eye" />
        </FrameLayout>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:gravity="center_vertical"
            android:imeOptions="actionNext"
            android:text="@string/title_new_password"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/new_pass_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:background="@color/grey"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingStart="20dp" />

            <ImageView
                android:id="@+id/eyes_new_pass"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/background_pressed_icon_grey"
                android:layout_gravity="right"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_eye"
                android:padding="12dp"/>
        </FrameLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:gravity="center_vertical"
            android:text="@string/title_confirm_password"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/confirm_pass_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:background="@color/grey"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingStart="20dp" />

            <ImageView
                android:id="@+id/eyes_confirm_pass"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginEnd="30dp"
                android:padding="12dp"
                android:src="@drawable/ic_eye"
                android:background="@drawable/background_pressed_icon_grey"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/background_pressed_logout"
                android:text="@string/btn_submit"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cancel_change_pass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/background_pressed_logout"
                android:text="@string/button_cancel"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
