<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/part_1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/userLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/icon1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/ic_username" />

                    <EditText
                        android:id="@+id/user_name_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/icon"
                        android:layout_weight="1"
                        android:background="@null"
                        android:backgroundTint="@android:color/background_light"
                        android:drawablePadding="10dp"
                        android:focusableInTouchMode="true"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:singleLine="true"

                        android:textColor="#ffffff"
                        android:textColorHint="#fff" />

                    <ImageButton
                        android:id="@+id/btnDeleteUser"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="bottom"
                        android:background="@drawable/ic_clear" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/edtUser"
                    android:layout_marginTop="8dp"
                    android:background="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/passLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userLayout"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/icon2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/ic_password" />

                    <EditText
                        android:id="@+id/pass_word_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/icon"
                        android:layout_weight="1"
                        android:background="@null"
                        android:backgroundTint="@android:color/background_light"
                        android:drawablePadding="10dp"
                        android:hint="Password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="#ffffff"
                        android:textColorHint="#fff" />

                    <ImageButton
                        android:id="@+id/btnDeletePass"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="bottom"
                        android:background="@drawable/ic_clear" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/edtPassword"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/tv_save_username_and_password"/>
                <CheckBox
                    android:id="@+id/checkboxSave"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_marginLeft="8dp"
                    android:buttonTint="@android:color/white"/>
            </LinearLayout>



            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_pressed_login"
                android:text="@string/tv_sign_in"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_forgot_password"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_pressed_white"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:text="@string/tv_gem_internal_application"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>

    </ScrollView>




</android.support.design.widget.CoordinatorLayout>
